--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
         "Extension Packs"
     ],
     "extensionPack": [ 
-        "publisher.extensionName"
+        "4ops.terraform"
+        "vscode-aws-console.vscode-aws-console"
+        "aws-amplify.aws-amplify-vscode"
+        "thundra.thundra-debugger"
+        "loganarnett.lambda-snippets"
+        "mziyabo.vscode-codedeploy"
     ]
 }
